force-app/main/default/objects/Purchase_Authorization__c/Purchase_Authorization__c.object-meta.xml
<CustomObject>
    <label>Purchase Authorization</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Purchase Authorization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>