force-app/main/default/objects/Purchase_Authorization__c/fields/Approveddenied_by__c.field-meta.xml
<CustomField>
    <fullName>Approveddenied_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approveddenied by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Authorizations2</relationshipName>
    <type>Lookup</type>
</CustomField>