force-app/main/default/objects/Purchase_Authorization__c/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <formula>Select_Approver__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Role</label>
    <type>Text</type>
</CustomField>