force-app/main/default/objects/Purchase_Authorization__c/fields/Cost_not_be_exceed__c.field-meta.xml
<CustomField>
    <fullName>Cost_not_be_exceed__c</fullName>
    <label>Cost not be exceed</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>