force-app/main/default/objects/Purchase_Authorization__c/fields/Fiscal_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Category_Code__c</fullName>
    <label>Fiscal Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7502</fullName>
            </value>
            <value>
                <fullName>7503</fullName>
            </value>
            <value>
                <fullName>7504</fullName>
            </value>
            <value>
                <fullName>2110</fullName>
            </value>
            <value>
                <fullName>2123</fullName>
            </value>
            <value>
                <fullName>2131</fullName>
            </value>
            <value>
                <fullName>2132</fullName>
            </value>
            <value>
                <fullName>2134</fullName>
            </value>
            <value>
                <fullName>2135</fullName>
            </value>
            <value>
                <fullName>2136</fullName>
            </value>
            <value>
                <fullName>2137</fullName>
            </value>
            <value>
                <fullName>2138</fullName>
            </value>
            <value>
                <fullName>2140</fullName>
            </value>
            <value>
                <fullName>2141</fullName>
            </value>
            <value>
                <fullName>2142</fullName>
            </value>
            <value>
                <fullName>2143</fullName>
            </value>
            <value>
                <fullName>2144</fullName>
            </value>
            <value>
                <fullName>2145</fullName>
            </value>
            <value>
                <fullName>2146</fullName>
            </value>
            <value>
                <fullName>2147</fullName>
            </value>
            <value>
                <fullName>2148</fullName>
            </value>
            <value>
                <fullName>2149</fullName>
            </value>
            <value>
                <fullName>2150</fullName>
            </value>
            <value>
                <fullName>2152</fullName>
            </value>
            <value>
                <fullName>2155</fullName>
            </value>
            <value>
                <fullName>2156</fullName>
            </value>
            <value>
                <fullName>2171</fullName>
            </value>
            <value>
                <fullName>2172</fullName>
            </value>
            <value>
                <fullName>2173</fullName>
            </value>
            <value>
                <fullName>2174</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>