force-app/main/default/objects/Purchase_Authorization__c/fields/Fiscal_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Category_Description__c</fullName>
    <label>Fiscal Category Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7502 - Disbursements from Conserved Accounts</fullName>
            </value>
            <value>
                <fullName>7503 - Disbursements from Dedicated Accounts</fullName>
            </value>
            <value>
                <fullName>7504 - Disbursements from Independent Living Accou</fullName>
            </value>
            <value>
                <fullName>2110 - OTO Adoption Services</fullName>
            </value>
            <value>
                <fullName>2123 - Infant Care for Teenage Mothers</fullName>
            </value>
            <value>
                <fullName>2131 - Purchased Institutional Supplemental Services</fullName>
            </value>
            <value>
                <fullName>2132 - Foster Care Day Care Services</fullName>
            </value>
            <value>
                <fullName>2134 - Transportation Services</fullName>
            </value>
            <value>
                <fullName>2135 - Social Admissions</fullName>
            </value>
            <value>
                <fullName>2136 - Psychiatric Admissions</fullName>
            </value>
            <value>
                <fullName>2137 - Emergency FC Retainer</fullName>
            </value>
            <value>
                <fullName>2138 - AIDS Stipend</fullName>
            </value>
            <value>
                <fullName>2140 - Adoption</fullName>
            </value>
            <value>
                <fullName>2141 - CPS</fullName>
            </value>
            <value>
                <fullName>2142 - SFC</fullName>
            </value>
            <value>
                <fullName>2143 - IFS</fullName>
            </value>
            <value>
                <fullName>2144 - Kinship Care</fullName>
            </value>
            <value>
                <fullName>2145 - Families Now - Level I</fullName>
            </value>
            <value>
                <fullName>2146 - Families Now - Level II</fullName>
            </value>
            <value>
                <fullName>2147 - Families Now - Level III</fullName>
            </value>
            <value>
                <fullName>2148 - Families Now - Level IV</fullName>
            </value>
            <value>
                <fullName>2149 - TFC Support Services</fullName>
            </value>
            <value>
                <fullName>2150 - Court Ordered</fullName>
            </value>
            <value>
                <fullName>2152 - Independent Living</fullName>
            </value>
            <value>
                <fullName>2155 - FC SSI-IAR Reimbursements Received</fullName>
            </value>
            <value>
                <fullName>2156 - FC SSI-IAR Reimbursements Received</fullName>
            </value>
            <value>
                <fullName>2171 - Emergency Foster Home Care</fullName>
            </value>
            <value>
                <fullName>2172 - Emergency Group Shelter Care</fullName>
            </value>
            <value>
                <fullName>2173 - Regular Foster Home Care</fullName>
            </value>
            <value>
                <fullName>2174 - Intermediate Foster Home Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>