force-app/main/default/objects/Purchase_Authorization__c/fields/Forwarded_From__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forwarded From</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Authorizations1</relationshipName>
    <type>Lookup</type>
</CustomField>