force-app/main/default/objects/Purchase_Authorization__c/fields/Funding_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Approval_Status__c</fullName>
    <label>Funding Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>