force-app/main/default/objects/Purchase_Authorization__c/fields/Payment_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Approval_Status__c</fullName>
    <label>Payment Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>