force-app/main/default/objects/Purchase_Authorization__c/fields/Select_Approver__c.field-meta.xml
<CustomField>
    <fullName>Select_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Casevault Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>