force-app/main/default/objects/Purchase_Authorization__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>ServiceLog__c</referenceTo>
    <relationshipLabel>Purchase Authorizations</relationshipLabel>
    <relationshipName>Purchase_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>