force-app/main/default/objects/Purchase_Authorization__c/fields/Voucher_Requested__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Requested__c</fullName>
    <label>Voucher Requested</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>